force-app/main/default/objects/cgcloud__Promotion_Template_KPI_Definition__c/cgcloud__Promotion_Template_KPI_Definition__c.object-meta.xml
<CustomObject>
    <description>Promotion Template Kpi Definition</description>
    <label>Promotion Template Kpi Definition</label>
    <nameField>
        <label>Promotion Template Kpi Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Template Kpi Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>