force-app/main/default/objects/cgcloud__Promotion_Template_KPI_Definition__c/fields/cgcloud__KPI_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>KPI Definition</description>
    <label>KPI Definition</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Promotion Template KPI Definitions</relationshipLabel>
    <relationshipName>Promotion_Template_KPI_Definitions2</relationshipName>
    <type>Lookup</type>
</CustomField>