force-app/main/default/objects/cgcloud__Promotion_Template_KPI_Definition__c/fields/cgcloud__KPI_Definition_Storage_Options_Measure__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Definition_Storage_Options_Measure__c</fullName>
    <formula>cgcloud__KPI_Definition__r.cgcloud__Storage_Options_Measure_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Definition Writeback Code</label>
    <type>Text</type>
</CustomField>