force-app/main/default/objects/cgcloud__Promotion_Template_KPI_Definition__c/fields/cgcloud__Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template__c</fullName>
    <description>Promotion Template</description>
    <label>Promotion Template</label>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>Promotion Template KPI Definitions</relationshipLabel>
    <relationshipName>Promotion_Template_KPI_Definitions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>