force-app/main/default/objects/cgcloud__Promotion_Template_KPI_Definition__c/fields/cgcloud__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Key__c</fullName>
    <description>A system-generated key that enforces a unique link between a promotion template and a KPI definition. This is an internal field.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>