force-app/main/default/objects/cgcloud__Promotion_Template_KPI_Definition__c/fields/cgcloud__Usage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage__c</fullName>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ClosureSnapshot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>