force-app/main/default/objects/cgcloud__Promotion_Template_KPI_Definition__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Promotion_Template__c</columns>
    <columns>cgcloud__KPI_Definition__c</columns>
    <columns>cgcloud__Usage__c</columns>
    <columns>cgcloud__KPI_Definition_Storage_Options_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>